--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@ float: left;
         <i class="fas fa-plus" id="link-noticia" onclick="Mostrar()"></i>
     </button> -->
 </div>
-
+<div>
+    
+</div>
 
 <div class="divCurriculo">
     <!-- <img src="imgs/transferir.jpg" alt="foto"> -->
