--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div id="box">
 
     <div class="divSobre" id="divSobre">
-      <img src="foto_kawa_semfundo.png" alt="" width="200px">
+      <img src="imgs/foto_kawa_semfundo.png" alt="" width="200px">
       <h2>Sobre mim</h2>
       <p id="texto-principal-noticia">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae harum molestiae,
         <br>numquam cupiditate inventore ducimus quasi eos facilis dolorum tempora,
@@ -47,7 +47,7 @@
       <a href="#" class="hvr-icon-hang" onclick="Mostrar()">
         <button type="button" class="mostrando_mais" id="btn_mostrar">
           &nbsp;
-          <span></span><img src="expand_more_black_24dp.svg" class="hvr-icon" id="img_menos" />
+          <span></span><img src="imgs/expand_more_black_24dp.svg" class="hvr-icon" id="img_menos" />
         </button>
       </a>
     </div>
@@ -87,21 +87,21 @@
       <div class="divRede" id="linkedin">
         <a href="https://www.linkedin.com/in/kaw%C3%A3-ribeiro/" target="_blank">
           <!--_blank - para abrir a Url em outra página-->
-          <img src="linkedin2.png" class="hvr-float">
+          <img src="imgs/linkedin2.png" class="hvr-float">
         </a>
       </div>
 
       <p>kawa.rfaragao@gmail.com</p>
       <div class="divRede" id="gmail">
         <a href="mailto:kawa.rfaragao@gmail.com?">
-          <img src="gmail.png" class="hvr-float">
+          <img src="imgs/gmail.png" class="hvr-float">
         </a>
       </div>
 
       <p>Kawa-github</p>
       <div class="divRede" id="github">
         <a href="https://github.com/Kawa-github/" target="_blank">
-          <img src="github_logo_icon_white.png" class="hvr-float">
+          <img src="imgs/github_logo_icon_white.png" class="hvr-float">
         </a>
       </div>
     </div>
@@ -175,12 +175,12 @@
   function Mostrar() {
     if (document.getElementById('btn_mostrar').classList.contains('mostrando_mais')) {
       document.getElementById('btn_mostrar').classList.remove('mostrando_mais')
-      document.getElementById('img_menos').src = 'expand_less_black_24dp.svg'
+      document.getElementById('img_menos').src = 'imgs/expand_less_black_24dp.svg'
       document.getElementById('texto-principal-noticia').innerHTML = txt
       document.querySelector('#btn_mostrar span').innerHTML = 'Mostrar Menos'
     } else {
       document.getElementById('btn_mostrar').classList.add('mostrando_mais')
-      document.getElementById('img_menos').src = 'expand_more_black_24dp.svg'
+      document.getElementById('img_menos').src = 'imgs/expand_more_black_24dp.svg'
       document.querySelector('#btn_mostrar span').innerHTML = 'Mostrar Mais'
       document.getElementById('texto-principal-noticia').innerHTML = txt2
     }
